--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
@@ -36,10 +37,10 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^10.8.0",
-    "cypress-cucumber-preprocessor": "^4.3.1"
+    "cypress": "^10.8.0"
   },
   "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true
+    "nonGlobalStepDefinitions": true,
+    "stepDefinitions": "cypress/e2e"
   }
 }
